infrastructure/argocd/deployment/app-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend-deployment
  labels:
    app: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
      - name: app-frontend
        image: ghcr.io/ruegerj/devops/web
        ports:
        - containerPort: 4173
