infrastructure/argocd/deployment/app-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend-service
  labels:
    app: app-backend
spec:
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
