infrastructure/argocd/deployment/app-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend-service
  labels:
    app: app-frontend
spec:
  type: ClusterIP
  selector:
    app: app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
      name: http
    - protocol: TCP
      port: 4138
      targetPort: 4138
      name: metrics
