infrastructure/argocd/deployment/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: app.g08.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - app.g08.local
